Require message value to be a string (#464)
* Require message value to be a string

* Line wrap

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -766,6 +766,7 @@
                     </dt>
                     <dd>
                         The value of this key is freeform text, used to record the rationale for creating this version.
+                        It <span id="E094">MUST</span> be a JSON string.
                     </dd>
                     <dt>
                         <code>user</code>
