--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -945,7 +945,7 @@ DIGEST inventory.json
         </p>
         <p>
           An OCFL Storage Root MAY contain other files. These might include a human-readable copy of the OCFL
-          specification to make the storage root self-documenting, or files used by <a href="#root-extensions">storage
+          specification to make the storage root self-documenting, or files used by <a href="#storage-root-extensions">storage
           root extensions</a>.
         </p>
         <p>
