Issue 466: fix storage root extensions link (#467)
* fix storage root extensions link

* line wrap

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -945,8 +945,8 @@ DIGEST inventory.json
         </p>
         <p>
           An OCFL Storage Root MAY contain other files. These might include a human-readable copy of the OCFL
-          specification to make the storage root self-documenting, or files used by <a href="#root-extensions">storage
-          root extensions</a>.
+          specification to make the storage root self-documenting, or files used by
+          <a href="#storage-root-extensions">storage root extensions</a>.
         </p>
         <p>
           An OCFL Storage Root MAY contain a JSON file named <code>ocfl_layout.json</code> to describe the arrangement
