--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -654,7 +654,9 @@
                 of every content file in all versions of the <a>OCFL Object</a>. The value for each key
                 <span id="E092">MUST</span> be an array containing the <a>content path</a>s of files in the OCFL
                 Object that have content with the given digest. Content paths within a manifest block
-                <span id="E042">MUST</span> be relative to the <a>OCFL Object Root</a>.
+                <span id="E042">MUST</span> be relative to the <a>OCFL Object Root</a>. As JSON keys are case 
+                sensitive, while digests may not be, there is an additional requirement that each digest value 
+                <span id="E096">MUST</span> occur only once in the manifest regardless of case.
             </p>
             <blockquote class="informative">
                 <p>
@@ -810,7 +812,10 @@
                 values for any subset of content paths in the object. Where included, the digest values given
                 <span id="E093">MUST</span> match the digests of the files at the corresponding content paths. There
                 is no requirement that all content files have a value in the fixity block, or that fixity values
-                provided in one version are carried forward to later versions.
+                provided in one version are carried forward to later versions. As JSON keys are case 
+                sensitive, while digests may not be, there is an additional requirement that each digest value 
+                <span id="E097">MUST</span> occur only once in the fixity block for any digest algorithm, regardless
+                of case.
             </p>
             <blockquote class="informative">
             <p>
