--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -11,19 +11,22 @@
             specStatus: "unofficial",
             shortName: "ocfl-spec",
             includePermalinks: true,
-            editors: [
+           editors: [
                 {
                     name: "Andrew Hankinson",
+                    url: "https://orcid.org/0000-0003-2663-0003",
                     company: "Bodleian Libraries, University of Oxford",
                     companyURL: "http://www.bodleian.ox.ac.uk/"
                 },
                 {
                     name: "Neil Jefferies",
+                    url: "https://orcid.org/0000-0003-3311-3741",
                     company: "Bodleian Libraries, University of Oxford",
                     companyURL: "http://www.bodleian.ox.ac.uk/"
                 },
                 {
                     name: "Rosalyn Metz",
+                    url: "https://orcid.org/0000-0003-3526-2230",
                     company: "Emory University",
                     companyURL: "https://web.library.emory.edu/"
                 },
@@ -41,8 +44,9 @@
                 },
                 {
                     name: "Andrew Woods",
-                    company: "DuraSpace",
-                    companyURL: "http://duraspace.org/"
+                    url: "https://orcid.org/0000-0002-8318-4225",
+                    company: "LYRASIS",
+                    companyURL: "https://lyrasis.org/"
                 }
             ],
             edDraftURI: "https://ocfl.io/draft/implementation-notes/",
