Fixed: disallow arbitrary keys
Fixes #474

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -603,7 +603,8 @@
         <section id="inventory-structure">
             <h2>Basic Structure</h2>
             <p>
-                An OCFL Object Inventory <span id="E036">MUST</span> include the following keys:
+                An OCFL Object Inventory <span id="E036">MUST</span> include the following keys, and
+                <span id="E102">MUST NOT</span> contain any keys not specified.
             </p>
             <dl>
                 <dt><code>id</code></dt>
