Fixed: Update implementation notes version

--- a/0.9/implementation-notes/index.html
+++ b/0.9/implementation-notes/index.html
@@ -49,7 +49,7 @@
                     companyURL: "https://lyrasis.org/"
                 }
             ],
-            edDraftURI: "https://ocfl.io/draft/implementation-notes/",
+            edDraftURI: "https://ocfl.io/0.9/implementation-notes/",
             wg: "Oxford Common File Layout Editors",
             wgURI: "https://ocfl.io",
             wgPublicList: "",
