Fixed: Update spec versions

--- a/0.9/spec/index.html
+++ b/0.9/spec/index.html
@@ -49,7 +49,7 @@
                     companyURL: "https://lyrasis.org/"
                 }
             ],
-            edDraftURI: "https://ocfl.io/draft/spec/",
+            edDraftURI: "https://ocfl.io/0.9/spec/",
             wg: "Oxford Common File Layout Editors",
             wgURI: "https://ocfl.io",
             wgPublicList: "",
