Link from the draft to the previous version

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -57,7 +57,8 @@
                 key: "Previous version",
                 data: [
                     {
-                        value: "N/A"
+                        value: "https://ocfl.io/0.9/spec/",
+                        href: "https://ocfl.io/0.9/spec/"
                     }
                 ]
             }, {
