--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -57,7 +57,8 @@
                 key: "Previous version",
                 data: [
                     {
-                        value: "N/A"
+                        value: "https://ocfl.io/0.9/implementation-notes/",
+                        href: "https://ocfl.io/0.9/implementation-notes/"
                     }
                 ]
             }, {
