Fixed: Additonal respec changes

--- a/1.0/spec/index.html
+++ b/1.0/spec/index.html
@@ -5,17 +5,9 @@
     <meta charset="utf-8"/>
     <meta name="description" content="Oxford Common File Layout Specification"/>
     <script src="../respec-ocfl.js" async class="remove"></script>
-
-    <script type="application/javascript">
-        window.addEventListener('load', function(event) {
-            var w3logo = document.querySelector('logo[href="https://www.w3.org/"]');
-            console.log(w3logo);
-        });
-    </script>
-
     <script class="remove">
         var respecConfig = {
-            specStatus: "base",
+            specStatus: "REC",
             publishDate: "2020-07-07",
             shortName: "ocfl-spec",
             includePermalinks: true,
@@ -60,6 +52,8 @@
             wg: "Oxford Common File Layout Editors",
             wgURI: "https://ocfl.io",
             wgPublicList: "ocfl-community",
+            previousMaturity: "unofficial",
+            previousPublishDate: "2020-06-29",
             otherLinks: [{
                 key: "Previous version",
                 data: [
@@ -1669,6 +1663,7 @@ myfirstbag
 </pre>
     </section>
 </section>
+
 <p class="copyright">
     This document is licensed under a
     <a class="subfoot" href="https://creativecommons.org/licenses/by/4.0/" rel="license">
