Fixed: Adjust implementation notes

--- a/1.0/implementation-notes/index.html
+++ b/1.0/implementation-notes/index.html
@@ -9,7 +9,7 @@
     <script class="remove">
         var respecConfig = {
             specStatus: "unofficial",
-            shortName: "ocfl-spec",
+            shortName: "ocfl-impl",
             includePermalinks: true,
             editors: [
                 {
@@ -56,8 +56,8 @@
                 key: "Previous version",
                 data: [
                     {
-                        value: "https://ocfl.io/1.0/implementation-notes/",
-                        href: "https://ocfl.io/1.0/implementation-notes/"
+                        value: "https://ocfl.io/0.9/implementation-notes/",
+                        href: "https://ocfl.io/0.9/implementation-notes/"
                     }
                 ]
             }, {
