Fixed: override copyright is deprecated

--- a/1.0/implementation-notes/index.html
+++ b/1.0/implementation-notes/index.html
@@ -88,9 +88,6 @@
                 width: 307,
                 height: 307
             }],
-            overrideCopyright: '<p class="copyright">This document is licensed under a ' +
-                '<a class="subfoot" href="https://creativecommons.org/licenses/by/4.0/" rel="license">' +
-                'Creative Commons Attribution 4.0 License</a>.</p>',
             localBiblio: {
                 "NAMASTE": {
                     title: "Directory Description with Namaste Tags",
@@ -918,6 +915,10 @@
       </section>
     </section>
   </section>
-
+  <p class="copyright">
+      This document is licensed under a
+      <a class="subfoot" href="https://creativecommons.org/licenses/by/4.0/" rel="license">
+      Creative Commons Attribution 4.0 License</a>.
+  </p>
 </body>
 </html>
