Fixing links and some broken bits in the specs

--- a/1.0/implementation-notes/index.html
+++ b/1.0/implementation-notes/index.html
@@ -4,11 +4,11 @@
     <title>Implementation Notes, Oxford Common File Layout Specification</title>
     <meta charset="utf-8">
     <meta name="description" content="Client Behaviours, Oxford Common File Layout Specification">
-    <script src="../respec-ocfl.js"
+    <script src="../../assets/respec-ocfl.js"
             async class="remove"></script>
     <script class="remove">
         var respecConfig = {
-            specStatus: "unofficial",
+            specStatus: "NOTE",
             shortName: "ocfl-impl",
             includePermalinks: true,
             editors: [
