--- a/1.0/spec/index.html
+++ b/1.0/spec/index.html
@@ -4,7 +4,7 @@
     <title>Oxford Common File Layout Specification</title>
     <meta charset="utf-8"/>
     <meta name="description" content="Oxford Common File Layout Specification"/>
-    <script src="../respec-ocfl.js" async class="remove"></script>
+    <script src="../../assets/respec-ocfl.js" async class="remove"></script>
     <script class="remove">
         var respecConfig = {
             specStatus: "REC",
@@ -85,7 +85,7 @@
             }],
             maxTocLevel: 3,
             logos: [{
-                src: "https://avatars0.githubusercontent.com/u/35607965",
+                src: "https://ocfl.io/assets/ocfl-logo.png",
                 alt: "OCFL Logo",
                 width: 307,
                 height: 307
@@ -735,7 +735,7 @@
                             content with the given digest.
                         </p>
                         <p>
-                            <a href="#logical-path">Logical paths</a> present the structure of an OCFL Object at a
+                            <a>Logical path</a>s present the structure of an OCFL Object at a
                             given version. This is given as an array of values, with the following restrictions to
                             provide for path safety in the common case of the logical path value representing a file
                             path.
