Fixed: disable w3c linting rules

--- a/1.0/implementation-notes/index.html
+++ b/1.0/implementation-notes/index.html
@@ -10,6 +10,12 @@
         var respecConfig = {
             specStatus: "NOTE",
             shortName: "ocfl-impl",
+            lint: {
+                // turn off w3c-specific linting
+                "privsec-section": false,
+                "no-http-props": false,
+                "no-headingless-sections": false
+            },
             includePermalinks: true,
             editors: [
                 {
