Fixed: Make version URIs explicit

--- a/1.0/spec/index.html
+++ b/1.0/spec/index.html
@@ -9,6 +9,8 @@
         var respecConfig = {
             specStatus: "REC",
             publishDate: "2020-07-07",
+            thisVersion: "https://ocfl.io/1.0/spec/",
+            latestVersion: "https://ocfl.io/latest/spec/",
             shortName: "ocfl-spec",
             lint: {
                 // turn off w3c-specific linting
