--- a/1.0/spec/index.html
+++ b/1.0/spec/index.html
@@ -63,6 +63,22 @@
             previousMaturity: "unofficial",
             previousPublishDate: "2020-06-29",
             otherLinks: [{
+                key: "Additional Documents",
+                data: [
+                    {
+                        value: "Implementation Notes",
+                        href: "https://ocfl.io/1.0/implementation-notes",
+                    },
+                    {
+                        value: "Validation Codes",
+                        href: "https://github.com/OCFL/spec/blob/master/validation/validation-codes.md",
+                    },
+                    {
+                        value: "Extensions",
+                        href: "https://github.com/OCFL/extensions",
+                    }
+                ]
+            }, {
                 key: "Previous version",
                 data: [
                     {
