New: Add additional document links

--- a/1.0/implementation-notes/index.html
+++ b/1.0/implementation-notes/index.html
@@ -59,6 +59,22 @@
             wgURI: "https://ocfl.io",
             wgPublicList: "",
             otherLinks: [{
+                key: "Additional Documents",
+                data: [
+                    {
+                        value: "Implementation Notes",
+                        href: "https://ocfl.io/1.0/implementation-notes/",
+                    },
+                    {
+                        value: "Validation Codes",
+                        href: "https://github.com/OCFL/spec/blob/master/validation/validation-codes.md",
+                    },
+                    {
+                        value: "Extensions",
+                        href: "https://github.com/OCFL/extensions/",
+                    }
+                ]
+            }, {
                 key: "Previous version",
                 data: [
                     {
