--- a/0.9/spec/index.html
+++ b/0.9/spec/index.html
@@ -8,6 +8,7 @@
             async class="remove"></script>
     <script class="remove">
         var respecConfig = {
+            publishDate: "2020-06-23",
             specStatus: "unofficial",
             shortName: "ocfl-spec",
             includePermalinks: true,
