Add date and links to implementation notes

--- a/1.0/implementation-notes/index.html
+++ b/1.0/implementation-notes/index.html
@@ -8,8 +8,11 @@
             async class="remove"></script>
     <script class="remove">
         var respecConfig = {
+            publishDate: "2020-07-07",
             specStatus: "NOTE",
             shortName: "ocfl-impl",
+            thisVersion: "https://ocfl.io/1.0/implementation-notes/",
+            latestVersion: "https://ocfl.io/latest/implementation-notes/",
             lint: {
                 // turn off w3c-specific linting
                 "privsec-section": false,
