--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -593,9 +593,9 @@
     <section id="inventory">
         <h2>Inventory</h2>
         <p>
-            An OCFL Object Inventory <span id="E033">MUST</span> follow the [[!JSON]] structure described in this
-            section and <span id="E034">MUST</span> be named <code>inventory.json</code>. The order of entries in both
-            the [[JSON]] objects and arrays used in inventory files has no significance. An OCFL Object Inventory
+            An OCFL Object Inventory <span id="E033">MUST</span> follow the JSON (defined by [[!RFC8259]]) structure
+            described in this section and <span id="E034">MUST</span> be named <code>inventory.json</code>. The order of
+            entries in both the JSON objects and arrays used in inventory files has no significance. An OCFL Object Inventory
             <span id="E102">MUST NOT</span> contain any keys not described in this specification.
         </p>
         <p>
