Add SoTD and fix previous version

--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -57,8 +57,8 @@
                 key: "Previous version",
                 data: [
                     {
-                        value: "https://ocfl.io/0.9/implementation-notes/",
-                        href: "https://ocfl.io/0.9/implementation-notes/"
+                        value: "https://ocfl.io/1.0/implementation-notes/",
+                        href: "https://ocfl.io/1.0/implementation-notes/"
                     }
                 ]
             }, {
@@ -137,6 +137,9 @@
         This document provides guidance on implementation of the [[OCFL-Specification]] for how clients should behave
         when operating on OCFL Objects.
     </p>
+  </section>
+
+  <section id="sotd">
   </section>
 
   <section>
