--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -594,9 +594,10 @@
         <h2>Inventory</h2>
         <p>
             An OCFL Object Inventory <span id="E033">MUST</span> follow the JSON (defined by [[!RFC8259]]) structure
-            described in this section and <span id="E034">MUST</span> be named <code>inventory.json</code>. The order of
-            entries in both the JSON objects and arrays used in inventory files has no significance. An OCFL Object
-            Inventory <span id="E102">MUST NOT</span> contain any keys not described in this specification.
+            described in this section with contents encoded in UTF-8, and <span id="E034">MUST</span> be named
+            <code>inventory.json</code>. The order of entries in both the JSON objects and arrays used in inventory
+            files has no significance. An OCFL Object Inventory <span id="E102">MUST NOT</span> contain any keys not
+            described in this specification.
         </p>
         <p>
             The forward slash (/) path separator <span id="E035">MUST</span> be used in content paths in the
@@ -992,9 +993,10 @@ DIGEST inventory.json
           a storage root.
         </p>
         <p>
-          An OCFL Storage Root MAY contain a JSON file named <code>ocfl_layout.json</code> to describe the arrangement
-          of directories and OCFL objects under the storage root. If present, this JSON document
-          <span id="E070">MUST</span> include the following two keys in the root JSON object:
+          An OCFL Storage Root MAY contain a file named <code>ocfl_layout.json</code> to describe the arrangement of
+          directories and OCFL objects under the storage root. If present, <code>ocfl_layout.json</code>
+          <span id="E070">MUST</span> be a JSON (defined by [[!RFC8259]]) document encoded in UTF-8 and include the
+          following two keys in the root JSON object:
         </p>
         <ul>
           <li>
