Change institution with which Andrew Woods is associated.

--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -45,8 +45,8 @@
                 {
                     name: "Andrew Woods",
                     url: "https://orcid.org/0000-0002-8318-4225",
-                    company: "LYRASIS",
-                    companyURL: "https://lyrasis.org/"
+                    company: "Harvard University",
+                    companyURL: "https://library.harvard.edu/"
                 }
             ],
             edDraftURI: "https://ocfl.io/draft/implementation-notes/",
