Add 'user' block to https://ocfl.io/1.0/spec/#example-object-diff-paths
Related to: https://github.com/OCFL/spec/issues/539

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -1304,6 +1304,10 @@ DIGEST inventory.json
       "state": {
         "7545b8...f67": [ "a file.wxy" ],
         "af318d...3cd": [ "another file.xyz" ]
+      },
+      "user": {
+        "address": "mailto:admin@example.org",
+        "name": "Some Admin"
       }
     }
   }
