--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -493,10 +493,10 @@
           </p>
           <p>
               Every file within a version's content directory <span id="E023">MUST</span> be referenced in the
-              <a href="#manifest">manifest</a> section of the inventory. There <span id="E024">MUST NOT</span> be empty
-              directories within a version's content directory. A directory that would otherwise be empty MAY be
-              maintained by creating a file within it named according to local conventions, for example by making an
-              empty <code>.keep</code> file.
+              <a href="#manifest">manifest</a> section of that version's inventory. There
+              <span id="E024">MUST NOT</span> be empty directories within a version's content directory. A directory
+              that would otherwise be empty MAY be maintained by creating a file within it named according to local
+              conventions, for example by making an empty <code>.keep</code> file.
           </p>
         </section>
     </section>
@@ -663,9 +663,9 @@
             <h2>Manifest</h2>
             <p>
                 The value of the <code>manifest</code> key is a JSON object, with keys corresponding to the digests
-                of every content file in all versions of the <a>OCFL Object</a>. The value for each key
-                <span id="E092">MUST</span> be an array containing the <a>content path</a>s of files in the OCFL
-                Object that have content with the given digest. As JSON keys are case sensitive, while digests may
+                of every content file in the current and previous versions of the <a>OCFL Object</a>. The value for
+                each key <span id="E092">MUST</span> be an array containing the <a>content path</a>s of files in the
+                OCFL Object that have content with the given digest. As JSON keys are case sensitive, while digests may
                 not be, there is an additional requirement that each digest value <span id="E096">MUST</span> occur
                 only once in the manifest regardless of case. Content paths within a manifest block
                 <span id="E042">MUST</span> be relative to the <a>OCFL Object Root</a>. The following restrictions
